--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,9 @@
-/* Shrikhand */
+/* fonts */
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-/* Roboto */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 /* colors */
 /* fonts */
+/* reset */
 *,
 *::before,
 *::after {
@@ -26,6 +26,12 @@ a {
 
 body {
   font-family: "Roboto", "sans-serif";
+}
+
+main > * > * {
+  padding: 0 20px;
+  margin: 0 auto;
+  max-width: 768px;
 }
 
 .header {
@@ -58,11 +64,11 @@ body {
 
 .hero {
   text-align: center;
-  padding: 40px 30px;
+  padding: 40px 0;
   background: #f6f6f6;
 }
 .hero__title {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   font-weight: 700;
   margin-bottom: 20px;
 }
@@ -74,22 +80,65 @@ body {
 }
 
 @media screen and (min-width: 1024px) {
-  .location__text {
-    margin: 40px 0;
-  }
-
   .hero {
-    padding: 80px;
+    padding: 80px 0;
   }
   .hero__title {
     font-size: 2.4rem;
   }
 }
+.usage {
+  padding: 50px 0;
+}
+.usage__title {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+.usage__card {
+  display: flex;
+  align-items: center;
+  padding: 25px 35px;
+  border-radius: 25px;
+  background: #f6f6f6;
+  box-shadow: rgba(50, 50, 93, 0.15) 0px 6px 12px -2px, rgba(0, 0, 0, 0.1) 0px 3px 7px -3px;
+  position: relative;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+.usage__card:hover {
+  background: #f5edfe;
+}
+.usage__card:hover .fas {
+  color: #9356dc !important;
+}
+.usage__number {
+  height: 25px;
+  width: 25px;
+  padding: 5px;
+  text-align: center;
+  color: white;
+  font-size: 0.8rem;
+  border-radius: 50px;
+  background: #9356dc;
+  position: absolute;
+  left: -12px;
+}
+.usage .fas {
+  color: #7e7e7e;
+  margin-right: 20px;
+}
+.usage__card-text {
+  font-weight: 500;
+  color: #353535;
+}
+
 .btn {
   display: inline-block;
+  font-size: 1rem;
   color: white;
   font-weight: 500;
-  padding: 20px;
+  padding: 15px 20px;
   background: linear-gradient(170deg, #ff79da 0%, #9356dc 100%);
   border-radius: 50px;
   margin: 15px 0;
