--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -2,9 +2,10 @@
 
 .btn {
   display: inline-block;
+  font-size: 1rem;
   color: white;
   font-weight: 500;
-  padding: 20px;
+  padding: 15px 20px;
   background: linear-gradient(170deg, $color-secondary 0%, $color-primary 100%);
   border-radius: 50px;
   margin: 15px 0;
