--- a/src/scss/pages/_accueil.scss
+++ b/src/scss/pages/_accueil.scss
@@ -4,6 +4,7 @@
 .location {
   background: $color-medium-gray;
   @include center-flex;
+
   &__text {
     font-weight: 500;
     color: $color-dark-gray;
@@ -20,7 +21,7 @@
 
 .hero {
   text-align: center;
-  padding: 40px 30px;
+  padding: 40px 0;
   background: $color-light-gray;
 
   &__title {
@@ -37,13 +38,64 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .location__text {
-    margin: 40px 0;
-  }
   .hero {
-    padding: 80px;
+    padding: 80px 0;
+
     &__title {
       font-size: 2.4rem;
     }
+  }
+}
+
+.usage {
+  padding: 50px 0;
+
+  &__title {
+    @include main-title;
+    margin-bottom: 30px;
+  }
+
+  &__card {
+    display: flex;
+    align-items: center;
+    padding: 25px 35px;
+    border-radius: 25px;
+    background: $color-light-gray;
+    box-shadow: rgba(50, 50, 93, 0.15) 0px 6px 12px -2px,
+      rgba(0, 0, 0, 0.1) 0px 3px 7px -3px;
+    position: relative;
+    margin-bottom: 20px;
+    cursor: pointer;
+
+    &:hover {
+      background: $color-primary-light;
+
+      .fas {
+        color: $color-primary !important;
+      }
+    }
+  }
+
+  &__number {
+    height: 25px;
+    width: 25px;
+    padding: 5px;
+    text-align: center;
+    color: white;
+    font-size: 0.8rem;
+    border-radius: 50px;
+    background: $color-primary;
+    position: absolute;
+    left: -12px;
+  }
+
+  .fas {
+    color: $color-gray;
+    margin-right: 20px;
+  }
+
+  &__card-text {
+    font-weight: 500;
+    color: $color-dark-gray;
   }
 }
