--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -6,6 +6,12 @@
   justify-content: center;
 }
 
+@mixin container {
+  padding: 0 20px;
+  margin: 0 auto;
+  max-width: 768px;
+}
+
 @mixin main-title {
   font-size: $size-main-title;
   font-weight: 700;
