--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -3,9 +3,12 @@ $color-primary: #9356dc;
 $color-secondary: #ff79da;
 $color-tertiary: #99e2d0;
 
+$color-primary-light: #f5edfe;
+
 $color-light-gray: #f6f6f6;
 $color-medium-gray: #eaeaea;
+$color-gray: #7e7e7e;
 $color-dark-gray: #353535;
 
 /* fonts */
-$size-main-title: 1.6rem;
+$size-main-title: 1.5rem;
