--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -6,7 +6,7 @@
   color: white;
   font-weight: 500;
   padding: 15px 20px;
-  background: linear-gradient(170deg, $color-secondary 0%, $color-primary 100%);
+  background: $gradient-btn;
   border-radius: 50px;
   margin: 15px 0;
   cursor: pointer;
