--- a/public/css/main.css
+++ b/public/css/main.css
@@ -28,7 +28,20 @@ body {
   font-family: "Roboto", "sans-serif";
 }
 
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
 main > * > * {
+  padding: 0 20px;
+  margin: 0 auto;
+  max-width: 768px;
+}
+
+footer > * {
   padding: 0 20px;
   margin: 0 auto;
   max-width: 768px;
@@ -42,6 +55,109 @@ main > * > * {
 .header__logo {
   width: 165px;
   margin: 20px 0 10px 0;
+}
+
+.usage__card {
+  display: flex;
+  align-items: center;
+  padding: 25px 35px 25px 37px;
+  margin-left: 12px;
+  border-radius: 20px;
+  background: #f6f6f6;
+  box-shadow: rgba(50, 50, 93, 0.15) 0px 6px 12px -2px, rgba(0, 0, 0, 0.1) 0px 3px 7px -3px;
+  position: relative;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+.usage__card:hover {
+  background: #f5edfe;
+}
+.usage__card:hover .fas {
+  color: #9356dc;
+}
+.usage__number {
+  height: 25px;
+  width: 25px;
+  padding: 5px;
+  text-align: center;
+  color: white;
+  font-size: 0.8rem;
+  border-radius: 50px;
+  background: #9356dc;
+  position: absolute;
+  left: -12px;
+}
+.usage .fas {
+  color: #7e7e7e;
+  margin-right: 20px;
+}
+.usage__card-text {
+  font-weight: 500;
+  color: #353535;
+}
+
+@media screen and (min-width: 768px) {
+  .restaurants__cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px 35px;
+  }
+}
+.restaurants__card {
+  display: block;
+  border-radius: 15px;
+  box-shadow: rgba(50, 50, 93, 0.15) 0px 6px 12px -2px, rgba(0, 0, 0, 0.1) 0px 3px 7px -3px;
+  overflow: hidden;
+  margin-bottom: 15px;
+  position: relative;
+}
+.restaurants__card:hover {
+  cursor: pointer;
+}
+.restaurants__card-img {
+  height: 175px;
+  overflow: hidden;
+}
+.restaurants__card-body {
+  padding: 15px;
+}
+.restaurants__card-title {
+  font-size: 1.05rem;
+  line-height: 1;
+  font-weight: 700;
+  margin-bottom: 5px;
+}
+.restaurants__card-location {
+  font-size: 1rem;
+  font-weight: 300;
+  margin-bottom: 5px;
+}
+.restaurants__card-label {
+  position: absolute;
+  right: 12px;
+  top: 12px;
+  padding: 10px;
+  border-radius: 3px;
+  line-height: 0.7;
+  font-weight: 500;
+  color: #128667;
+  background: #99e2d0;
+}
+.restaurants__card-heart {
+  font-size: 1.5rem;
+  position: absolute;
+  right: 25px;
+  bottom: 30px;
+  cursor: pointer;
+}
+.restaurants__card-heart .fas {
+  display: none;
+}
+.restaurants__card-heart:hover .far {
+  transform: translateX(125%);
+}
+.restaurants__card-heart:hover .fas {
+  display: inline-block;
 }
 
 .location {
@@ -70,6 +186,7 @@ main > * > * {
 .hero__title {
   font-size: 1.5rem;
   font-weight: 700;
+  line-height: 1;
   margin-bottom: 20px;
 }
 .hero__subtitle {
@@ -79,7 +196,7 @@ main > * > * {
   margin-bottom: 20px;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   .hero {
     padding: 80px 0;
   }
@@ -93,44 +210,26 @@ main > * > * {
 .usage__title {
   font-size: 1.5rem;
   font-weight: 700;
+  line-height: 1;
   margin-bottom: 30px;
 }
-.usage__card {
-  display: flex;
-  align-items: center;
-  padding: 25px 35px;
-  border-radius: 25px;
+
+.restaurants {
+  padding: 60px 0 45px 0;
   background: #f6f6f6;
-  box-shadow: rgba(50, 50, 93, 0.15) 0px 6px 12px -2px, rgba(0, 0, 0, 0.1) 0px 3px 7px -3px;
-  position: relative;
-  margin-bottom: 20px;
-  cursor: pointer;
 }
-.usage__card:hover {
-  background: #f5edfe;
+.restaurants__title {
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1;
+  margin-bottom: 30px;
 }
-.usage__card:hover .fas {
-  color: #9356dc !important;
-}
-.usage__number {
-  height: 25px;
-  width: 25px;
-  padding: 5px;
-  text-align: center;
-  color: white;
-  font-size: 0.8rem;
-  border-radius: 50px;
-  background: #9356dc;
-  position: absolute;
-  left: -12px;
-}
-.usage .fas {
-  color: #7e7e7e;
-  margin-right: 20px;
-}
-.usage__card-text {
-  font-weight: 500;
-  color: #353535;
+@media screen and (min-width: 768px) {
+  .restaurants__cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 25px 35px;
+  }
 }
 
 .btn {
