--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -29,6 +29,17 @@ body {
   font-family: "Roboto", "sans-serif";
 }
 
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
 main > * > * {
+  @include container;
+}
+
+footer > * {
   @include container;
 }
