--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,8 @@
-@use "./base/base";
+@use "base/base";
 @use "utils/variables";
-@use "./utils/mixins";
-@use "./layout/header";
-@use "./pages/accueil";
-@use "./components/buttons";
+@use "utils/mixins";
+@use "layout/header";
+@use "layout/footer";
+@use "pages/accueil";
+@use "components/buttons";
+@use "components/cards";
