--- a/src/scss/pages/_accueil.scss
+++ b/src/scss/pages/_accueil.scss
@@ -1,5 +1,6 @@
 @use "../utils/variables" as *;
 @use "../utils/mixins" as *;
+@use "../components/cards" as *;
 
 .location {
   background: $color-medium-gray;
@@ -37,7 +38,7 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
   .hero {
     padding: 80px 0;
 
@@ -54,48 +55,22 @@
     @include main-title;
     margin-bottom: 30px;
   }
+}
 
-  &__card {
-    display: flex;
-    align-items: center;
-    padding: 25px 35px;
-    border-radius: 25px;
-    background: $color-light-gray;
-    box-shadow: rgba(50, 50, 93, 0.15) 0px 6px 12px -2px,
-      rgba(0, 0, 0, 0.1) 0px 3px 7px -3px;
-    position: relative;
-    margin-bottom: 20px;
-    cursor: pointer;
+.restaurants {
+  padding: 60px 0 45px 0;
+  background: $color-light-gray;
 
-    &:hover {
-      background: $color-primary-light;
+  &__title {
+    @include main-title;
+    margin-bottom: 30px;
+  }
 
-      .fas {
-        color: $color-primary !important;
-      }
+  @media screen and (min-width: 768px) {
+    &__cards {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 25px 35px;
     }
-  }
-
-  &__number {
-    height: 25px;
-    width: 25px;
-    padding: 5px;
-    text-align: center;
-    color: white;
-    font-size: 0.8rem;
-    border-radius: 50px;
-    background: $color-primary;
-    position: absolute;
-    left: -12px;
-  }
-
-  .fas {
-    color: $color-gray;
-    margin-right: 20px;
-  }
-
-  &__card-text {
-    font-weight: 500;
-    color: $color-dark-gray;
   }
 }
