--- a/public/css/main.css
+++ b/public/css/main.css
@@ -51,6 +51,7 @@ footer > * {
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: rgba(50, 50, 93, 0.15) 0px 6px 12px -2px, rgba(0, 0, 0, 0.1) 0px 3px 7px -3px;
 }
 .header__logo {
   width: 165px;
@@ -165,6 +166,8 @@ footer > * {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: -1;
+  position: relative;
 }
 .location__text {
   font-weight: 500;
