--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -7,6 +7,7 @@
   font-weight: 500;
   padding: 15px 20px;
   background: $gradient-btn;
+  box-shadow: $shadow-btn;
   border-radius: 50px;
   margin: 15px 0;
   cursor: pointer;
