--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -15,9 +15,14 @@ $color-dark-gray: #353535;
 $size-main-title: 1.5rem;
 $size-card-title: 1.05rem;
 $size-card-text: 1rem;
+$size-footer-text: 0.95rem;
 
-$shadow-card: rgba(50, 50, 93, 0.15) 0px 6px 12px -2px,
+$shadow-header: rgba(50, 50, 93, 0.15) 0px 6px 6px -2px,
+  rgba(0, 0, 0, 0.1) 0px 3px 4px -3px;
+$shadow-cards: rgba(50, 50, 93, 0.15) 0px 6px 12px -2px,
   rgba(0, 0, 0, 0.1) 0px 3px 7px -3px;
+$shadow-btn: rgba(50, 50, 93, 0.3) 0px 6px 12px -2px,
+  rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
 $gradient-btn: linear-gradient(
   170deg,
