--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -12,4 +12,10 @@
   margin: 15px 0;
   cursor: pointer;
   max-height: fit-content;
+  transition: 150ms ease-in-out;
+
+  &:hover {
+    background: $gradient-btn-hover;
+    box-shadow: $shadow-btn-hover;
+  }
 }
