--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,5 +4,6 @@
 @use "layout/header";
 @use "layout/footer";
 @use "pages/accueil";
+@use "pages/menu";
 @use "components/buttons";
 @use "components/cards";
