--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -34,6 +34,11 @@ $size-card-title: 1.05rem;
 $size-card-text: 1rem;
 $size-footer-text: 0.95rem;
 
+$size-main-title-menu-page: 1.65rem;
+$size-card-title-menu-page: 1.1rem;
+$size-card-text-menu-page: 0.9rem;
+$size-card-price-menu-page: 0.9rem;
+
 /* shadows */
 $shadow-header: rgba(50, 50, 93, 0.15) 0px 6px 6px -2px,
   rgba(0, 0, 0, 0.1) 0px 3px 4px -3px;
