--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -1,5 +1,6 @@
 @use "../utils/variables" as *;
 
+/* main button */
 .btn {
   display: inline-block;
   font-size: 1rem;
@@ -17,5 +18,56 @@
   &:hover {
     background: $gradient-btn-hover;
     box-shadow: $shadow-btn-hover;
+  }
+}
+
+/* heart button */
+.heart {
+  &-container {
+    position: relative;
+    transform: scale(0.625);
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+  }
+
+  &-clip {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    clip-path: url(#svgPath);
+    transition: 0.2s ease-in-out 0.2;
+
+    &:hover {
+      transform: scale(1.1);
+      &::before {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+
+    &::before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      background: $gradient-heart;
+      opacity: 0;
+      transform: scale(0);
+      transition: transform 0.2s linear, opacity 0.2s linear;
+      transform-origin: center 60%;
+    }
+  }
+
+  &-stroke {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    fill: black;
   }
 }
