--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -12,10 +12,10 @@
     box-shadow: $shadow-cards;
     position: relative;
     margin-bottom: 20px;
-    cursor: pointer;
+    cursor: default;
     transition: 150ms ease-in-out;
 
-    &:hover {
+    &--highlight {
       background: $color-primary-light;
       box-shadow: $shadow-cards-hover;
 
@@ -80,6 +80,8 @@
 
     &-body {
       padding: 15px;
+      position: relative;
+      height: fit-content;
     }
 
     &-title {
@@ -130,6 +132,122 @@
         .fas {
           opacity: 1;
         }
+      }
+    }
+  }
+}
+
+.menu {
+  &__card {
+    padding: 15px;
+    height: 65px;
+    margin: 0 -7px;
+    width: calc(100% + 14px);
+    background: white;
+    border-radius: 15px;
+    box-shadow: $shadow-cards;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 15px;
+    overflow: hidden;
+    cursor: pointer;
+    transform: translateY(50%);
+    opacity: 0;
+
+    animation-name: menu-items-animate-in;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+
+    @for $i from 2 through 5 {
+      &:nth-child(#{$i}n) {
+        animation-delay: #{$i * 0.2 +0.5}s;
+      }
+    }
+
+    @keyframes dish-type-animate-in {
+      from {
+        transform: translateY(10%);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    @keyframes menu-items-animate-in {
+      from {
+        transform: translateY(50%);
+        opacity: 0;
+      }
+      to {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    &:hover &-hidden-panel {
+      margin-right: -15px;
+
+      i {
+        transform: rotate(360deg);
+      }
+    }
+
+    &-content {
+      min-width: 0;
+      width: 100%;
+    }
+
+    &-title {
+      width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: inline-block;
+      font-size: $size-card-title-menu-page;
+      font-weight: 500;
+      margin-top: 2px;
+    }
+
+    &-text {
+      width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: inline-block;
+      font-size: $size-card-text-menu-page;
+      font-weight: 300;
+    }
+
+    &-price {
+      font-size: $size-card-price-menu-page;
+      font-weight: 700;
+      padding: 0 10px;
+      margin-right: 15px;
+      line-height: 0.8;
+      align-self: end;
+    }
+
+    &-hidden-panel {
+      height: calc(100% + 30px);
+      width: 60px;
+      flex-shrink: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-top: -30px;
+      margin-bottom: -30px;
+      margin-right: -75px;
+      background: $color-tertiary;
+      transition: margin-right 500ms ease-in-out;
+
+      i {
+        color: white;
+        font-size: 1.35rem;
+        transition: transform 500ms ease-in-out;
       }
     }
   }
