--- a/src/scss/pages/_menu.scss
+++ b/src/scss/pages/_menu.scss
@@ -31,6 +31,20 @@
 
   &__dish-type {
     margin-bottom: 40px;
+
+    opacity: 0;
+    transform: translateY(10%);
+
+    animation-name: dish-type-animate-in;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+
+    @for $i from 2 through 4 {
+      &:nth-child(#{$i}n) {
+        animation-delay: #{$i * 0.2 + 0.25}s;
+      }
+    }
   }
 
   &__dish-type-title {
@@ -48,109 +62,6 @@
       left: 0;
       bottom: -10px;
       background: $color-tertiary;
-    }
-  }
-
-  &__card {
-    padding: 15px;
-    margin: 0 -7px;
-    height: 65px;
-    width: calc(100% + 14px);
-    background: white;
-    border-radius: 15px;
-    box-shadow: $shadow-cards;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 15px;
-    overflow: hidden;
-    cursor: pointer;
-    transform: translateY(50%);
-    opacity: 0;
-
-    animation-name: menu-items-animate-in;
-    animation-duration: 0.5s;
-    animation-timing-function: ease-out;
-    animation-fill-mode: forwards;
-
-    @for $i from 1 through 9 {
-      &:nth-child(#{$i}n) {
-        animation-delay: #{$i * 0.175}s;
-      }
-    }
-
-    @keyframes menu-items-animate-in {
-      from {
-        transform: translateY(50%);
-        opacity: 0;
-      }
-      to {
-        transform: translateY(0);
-        opacity: 1;
-      }
-    }
-
-    &:hover &-hidden-panel {
-      margin-right: -15px;
-
-      i {
-        transform: rotate(360deg);
-      }
-    }
-
-    &-content {
-      min-width: 0;
-      width: 100%;
-    }
-
-    &-title {
-      width: 100%;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      display: inline-block;
-      font-size: $size-card-title-menu-page;
-      font-weight: 500;
-      margin-top: 2px;
-    }
-
-    &-text {
-      width: 100%;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      display: inline-block;
-      font-size: $size-card-text-menu-page;
-      font-weight: 300;
-    }
-
-    &-price {
-      font-size: $size-card-price-menu-page;
-      font-weight: 700;
-      padding: 0 10px;
-      margin-right: 15px;
-      line-height: 0.8;
-      align-self: end;
-    }
-
-    &-hidden-panel {
-      height: calc(100% + 30px);
-      width: 60px;
-      flex-shrink: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-top: -30px;
-      margin-bottom: -30px;
-      margin-right: -75px;
-      background: $color-tertiary;
-      transition: margin-right 300ms ease-out;
-
-      i {
-        color: white;
-        font-size: 1.35rem;
-        transition: transform 300ms ease-out;
-      }
     }
   }
 }
