--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,7 @@ footer > * {
   position: absolute;
   left: -12px;
 }
-.usage .fas {
+.usage i {
   color: #7e7e7e;
   margin-right: 20px;
 }
@@ -167,11 +167,13 @@ footer > * {
   margin-bottom: 15px;
   position: relative;
   transition: 150ms ease-in-out;
+  /* &:hover { */
+  /*   transform: scale(1.01); */
+  /*   box-shadow: $shadow-cards-hover; */
+  /* } */
 }
-.restaurants__card:hover {
-  cursor: pointer;
-  transform: scale(1.01);
-  box-shadow: rgba(50, 50, 93, 0.15) 0px 6px 12px -2px, rgba(0, 0, 0, 0.1) 0px 6px 12px -3px;
+.restaurants__card a {
+  width: fit-content;
 }
 .restaurants__card-img {
   height: 175px;
@@ -180,9 +182,10 @@ footer > * {
 .restaurants__card-body {
   padding: 15px;
   position: relative;
-  height: fit-content;
 }
 .restaurants__card-title {
+  display: inline-block;
+  width: fit-content;
   font-size: 1.05rem;
   line-height: 1;
   font-weight: 700;
@@ -314,7 +317,7 @@ footer > * {
   padding: 0 10px;
   margin-right: 15px;
   line-height: 0.8;
-  align-self: end;
+  align-self: flex-end;
 }
 .menu__card-hidden-panel {
   height: calc(100% + 30px);
