--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -38,7 +38,7 @@
     left: -12px;
   }
 
-  .fas {
+  i {
     color: $color-gray;
     margin-right: 20px;
   }
@@ -67,10 +67,13 @@
     position: relative;
     transition: 150ms ease-in-out;
 
-    &:hover {
-      cursor: pointer;
-      transform: scale(1.01);
-      box-shadow: $shadow-cards-hover;
+    /* &:hover { */
+    /*   transform: scale(1.01); */
+    /*   box-shadow: $shadow-cards-hover; */
+    /* } */
+
+    a {
+      width: fit-content;
     }
 
     &-img {
@@ -81,10 +84,11 @@
     &-body {
       padding: 15px;
       position: relative;
-      height: fit-content;
     }
 
     &-title {
+      display: inline-block;
+      width: fit-content;
       font-size: $size-card-title;
       line-height: 1;
       font-weight: 700;
@@ -228,7 +232,7 @@
       padding: 0 10px;
       margin-right: 15px;
       line-height: 0.8;
-      align-self: end;
+      align-self: flex-end;
     }
 
     &-hidden-panel {
