--- a/src/scss/pages/_menu.scss
+++ b/src/scss/pages/_menu.scss
@@ -23,9 +23,15 @@
     align-items: center;
     justify-content: space-between;
     padding-bottom: 40px;
+  }
 
-    i {
-      margin-right: 20px;
+  &__heart {
+    margin-right: 20px;
+
+    .fas::after {
+      background: $color-medium-gray;
+      background-clip: text;
+      -webkit-background-clip: text;
     }
   }
 
