--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
 @use "utils/mixins";
 @use "layout/header";
 @use "layout/footer";
+@use "layout/loader";
 @use "pages/accueil";
 @use "pages/menu";
 @use "components/buttons";
