--- a/css/main.css
+++ b/css/main.css
@@ -111,6 +111,63 @@ footer > * {
   text-decoration: underline;
 }
 
+.loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: white;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
+  z-index: 10;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  animation: loadingScreen 5s linear forwards;
+}
+@keyframes loadingScreen {
+  94% {
+    opacity: 1;
+  }
+  99% {
+    opacity: 0;
+    height: 100vh;
+  }
+  100% {
+    opacity: 0;
+    height: 0;
+  }
+}
+.loader__circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  margin: 0 3px;
+  animation: scaling 2s ease-in-out infinite;
+}
+.loader__circle:nth-child(1n) {
+  animation-delay: 0.15s;
+}
+.loader__circle:nth-child(2n) {
+  animation-delay: 0.3s;
+}
+.loader__circle:nth-child(3n) {
+  animation-delay: 0.45s;
+}
+@keyframes scaling {
+  0%, 100% {
+    transform: scale(0.2);
+    background: #9356dc;
+  }
+  30%, 70% {
+    transform: scale(1);
+    background: #ff79da;
+  }
+  35%, 55% {
+    background: #99e2d0;
+  }
+}
+
 .usage__card {
   display: flex;
   align-items: center;
@@ -122,7 +179,6 @@ footer > * {
   position: relative;
   margin-bottom: 20px;
   cursor: default;
-  transition: 150ms ease-in-out;
 }
 .usage__card--highlight {
   background: #f5edfe;
@@ -167,10 +223,6 @@ footer > * {
   margin-bottom: 15px;
   position: relative;
   transition: 150ms ease-in-out;
-  /* &:hover { */
-  /*   transform: scale(1.01); */
-  /*   box-shadow: $shadow-cards-hover; */
-  /* } */
 }
 .restaurants__card a {
   width: fit-content;
@@ -364,6 +416,7 @@ footer > * {
   position: absolute;
   left: 0;
   top: 0;
+  /* replace 3 next instances of 'height' by 'opacity' or vice versa */
   height: 100%;
   transition: height 0.4s ease-in-out;
   -webkit-text-stroke: 1.5px black;
