--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ footer > * {
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: loadingScreen 5s linear forwards;
+  animation: loadingScreen 4s linear forwards;
 }
 @keyframes loadingScreen {
   94% {
@@ -134,7 +134,6 @@ footer > * {
     height: 100vh;
   }
   100% {
-    opacity: 0;
     height: 0;
   }
 }
@@ -169,6 +168,7 @@ footer > * {
 }
 
 .usage__card {
+  color: #7e7e7e;
   display: flex;
   align-items: center;
   padding: 25px 35px 25px 37px;
@@ -179,13 +179,36 @@ footer > * {
   position: relative;
   margin-bottom: 20px;
   cursor: default;
+  animation: highlight 6s ease-in-out infinite;
+  /* &--highlight { */
+  /*   background: $color-primary-light; */
+  /*   box-shadow: $shadow-cards-hover; */
+  /**/
+  /*   .fas { */
+  /*     color: $color-primary; */
+  /*   } */
+  /* } */
 }
-.usage__card--highlight {
-  background: #f5edfe;
-  box-shadow: rgba(50, 50, 93, 0.15) 0px 6px 12px -2px, rgba(0, 0, 0, 0.1) 0px 6px 12px -3px;
+@keyframes highlight {
+  33%, 66% {
+    background: #f6f6f6;
+    box-shadow: rgba(50, 50, 93, 0.15) 0px 6px 12px -2px, rgba(0, 0, 0, 0.1) 0px 3px 7px -3px;
+    color: #7e7e7e;
+  }
+  44%, 55% {
+    background: #f5edfe;
+    box-shadow: rgba(50, 50, 93, 0.15) 0px 6px 12px -2px, rgba(0, 0, 0, 0.1) 0px 6px 12px -3px;
+    color: #9356dc;
+  }
 }
-.usage__card--highlight .fas {
-  color: #9356dc;
+.usage__card:nth-child(1n) {
+  animation-delay: 2s;
+}
+.usage__card:nth-child(2n) {
+  animation-delay: 4s;
+}
+.usage__card:nth-child(3n) {
+  animation-delay: 6s;
 }
 .usage__number {
   height: 25px;
@@ -200,7 +223,7 @@ footer > * {
   left: -12px;
 }
 .usage i {
-  color: #7e7e7e;
+  /* color: $color-gray; */
   margin-right: 20px;
 }
 .usage__card-text {
